# c-test

./: CMakeLists.txt
gfx/: Makefile  example
src/: main.c
